fix title overflow in EN version

--- a/static/styles.css
+++ b/static/styles.css
@@ -95,7 +95,7 @@ body {
 }
 
 .header__note {
-  font-size: 2.4em;
+  font-size: 2.3em;
   padding-left: 3rem;
   padding-right: 3rem;
   line-height: 1.5;
